[package]
name = "wlscreenaccess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3", features = ["url"] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", default-features = false }
url = { version = "2.3", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.21.0", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
